--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,9 @@ edition = "2021"
 eframe = { git = "https://github.com/emilk/egui.git", branch = "master" }
 rfd = "0.6"
 image = "0.23"
-sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
 tokio = "1"
+parking_lot = "0.11"
+sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
 
 [lib]
 crate-type = ["cdylib", "rlib"]
