--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "homm3_hero_viewer"
+name = "last_minute"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,11 +7,7 @@ edition = "2021"
 
 [dependencies]
 eframe = { git = "https://github.com/emilk/egui.git", branch = "master" }
-rfd = "0.6"
 image = "0.23"
 tokio = "1"
 parking_lot = "0.11"
 sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
-
-[lib]
-crate-type = ["cdylib", "rlib"]
